@@ -25,30 +25,23 @@ extern "C" {
 #pragma }
 #endif /* __cplusplus */
 
+
 /* compile time version
  */
 #define GTK_MAJOR_VERSION				(1)
 #define GTK_MINOR_VERSION				(1)
 #define GTK_MICRO_VERSION				(0)
 
-/* new functions gtk_container_set_focus_vadjustment() and
- * gtk_container_set_focus_hadjustment().
+/* new gtk_container_set_focus_[hv]adjustment()
  */
 #define GTK_HAVE_CONTAINER_FOCUS_ADJUSTMENTS		1-0-1
 
-/* new macros for checking of class types
- */
-#define	GTK_HAVE_IS_CLASS				1-1-0
-
-/* export the gtk_signal_init() function
- * new gtk_signal_n_emissions*() functions
+/* newly exported gtk_signal_init()
+ * new gtk_signal_n_emissions*()
  * "signal-name" is now an alias for "signal_name"
- * new gtk_signal_emitv*() interface
+ * new gtk_signal_emitv*()
  */
-#define GTK_HAVE_SIGNAL_INIT				1-1-0
-#define	GTK_HAVE_N_EMISSIONS				1-1-0
-#define GTK_HAVE_SIGNAL_LISP_SYNTAX			1-1-0
-#define GTK_HAVE_SIGNAL_EMITV				1-1-0
+#define GTK_HAVE_SIGNAL_INIT				1-0-2
   
 
 
